fdo#77056: Treat empty cells as if they have a value of 0.0.

Change-Id: Ibe64cf7177a5298c1878e0014c049dc9c82b1344